[package]
name = "usbd-ctaphid"
version = "0.2.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/usbd-ctaphid"
repository = "https://github.com/trussed-dev/usbd-ctaphid"
description = "usb-device driver for CTAPHID"
categories = ["embedded", "no-std"]

[dependencies]
ctaphid-dispatch = "0.2"
embedded-time = "0.12"
delog = "0.1.0"
heapless-bytes = "0.3"
interchange = "0.3.0"
serde = { version = "1.0", default-features = false }
usb-device = "0.2.3"
ref-swap = "0.1.2"
trussed-core = "0.1"


[features]
default = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

mldsa44 = ["ctaphid-dispatch/mldsa44", "trussed-core/mldsa44"]
mldsa65 = ["ctaphid-dispatch/mldsa65", "trussed-core/mldsa65"]
mldsa87 = ["ctaphid-dispatch/mldsa87", "trussed-core/mldsa87"]