[package]
name = "usbd-ctaphid"
version = "0.3.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/usbd-ctaphid"
repository = "https://github.com/trussed-dev/usbd-ctaphid"
description = "usb-device driver for CTAPHID"
categories = ["embedded", "no-std"]

[dependencies]
ctaphid-dispatch = "0.3"
embedded-time = "0.12"
delog = "0.1.0"
heapless-bytes = "0.5"
interchange = "0.3.0"
serde = { version = "1.0", default-features = false }
usb-device = "0.2.3"
ref-swap = "0.1.2"
trussed-core = "0.1"


[features]
default = []

log-all = []
log-none = []
log-trace = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[patch.crates-io]
ctaphid-dispatch = { git = "https://github.com/trussed-dev/ctaphid-dispatch.git", rev = "edc5d69eeb71e6718c60aad54574f6c3b824309c" }
ctaphid-app = { git = "https://github.com/trussed-dev/ctaphid-dispatch.git", rev = "edc5d69eeb71e6718c60aad54574f6c3b824309c" }
trussed-core = { git = "https://github.com/trussed-dev/trussed.git", rev = "1e7b09a983dc8ae64a7ad8401ce541a9a77e5939"}
